# pdf_processing

./: .gitignore  Dockerfile  README.md  pyproject.toml  unstructured.ipynb
notebooks/: pdf_processing.ipynb
notebooks/data/: 1999_breguet_ocr.hocr  1999_cacho_ocr.hocr
src/: google_ai_process.py  google_ai_process_batch.py  process_pdfs.py  process_unstructured_ingest_chunk.py  process_unstructured_ingest_full.py  unstructured_process.py
