 [tool.poetry]
name = "pdf-processing"
version = "0.1.0"
description = "Utilities for pdf processing"
authors = ["Dan Mueller <dsm@danmueller.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.18.2"
ocrmypdf = "^16.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
